<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home_white_24dp" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/identification_results"
            android:textColor="@color/endBackground2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/source_image"
            android:textColor="@color/endBackground2"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:layout_width="247dp"
            android:layout_height="330dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_before"
                    android:layout_width="250dp"
                    android:layout_height="333dp"
                    android:contentDescription="@string/source_image"
                    android:src="@drawable/ic_camera_white_150dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="24dp"
            android:background="@color/endBackground2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/result_image"
            android:textColor="@color/endBackground2"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:layout_width="247dp"
            android:layout_height="330dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/endBackground2">

                <ImageView
                    android:id="@+id/iv_after"
                    android:layout_width="250dp"
                    android:layout_height="333dp"
                    android:contentDescription="@string/result_image"
                    android:src="@drawable/ic_camera_white_150dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="24dp"
            android:background="@color/endBackground2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/identification_result"
            android:textColor="@color/endBackground2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:elevation="6dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/endBackground2"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/playfair_display"
                    android:text="@string/type_of_date_palm"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/playfair_display"
                    android:text="@string/kurma_ajwa"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="24dp"
            android:background="@color/endBackground2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/analysis_details"
            android:textColor="@color/endBackground2"
            android:textSize="18sp"
            android:textStyle="bold" />


        <android.support.v4.view.ViewPager
            android:id="@+id/vp_result"
            android:layout_width="match_parent"
            android:layout_height="256dp">

        </android.support.v4.view.ViewPager>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/bg_button"
            android:padding="8dp"
            android:text="@string/detail_process"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>