<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:elevation="6dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/endBackground2"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display"
                    android:text="@string/distance"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/playfair_display"
                    android:text="@string/angle"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/glcm_feature_details"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/energy"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/contrast"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_contrast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrast"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/correlation"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_correlation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correlation"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/entropy"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_entropy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entropy"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/homogeneity"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_homogeneity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homogeneity"
                    android:textColor="@color/text2"
                    android:textSize="12sp" />

            </TableRow>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>